Describe your real change

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <section id="about" class="section">
     <div class="about-container">
         <div class="about-text">
-            <h1>About Me</h1>
+            <h1>About Me:3</h1>
             <p>
             I’m a second-year IT student who’s still learning programming and coding. I’m really interested in web development 
             and new technologies, and I enjoy figuring out how systems work and turning ideas into simple, working applications.
