--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
   <header>
     <nav class="navbar">
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
       <h1 class="logo">MyPortfolio</h1>
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
@@ -39,7 +44,7 @@
   <section id="about" class="section">
     <div class="about-container">
         <div class="about-text">
-            <h1>About Me:3</h1>
+            <h1>About Me</h1>
             <p>
             I’m a second-year IT student who’s still learning programming and coding. I’m really interested in web development 
             and new technologies, and I enjoy figuring out how systems work and turning ideas into simple, working applications.
