--- a/index.html
+++ b/index.html
@@ -45,9 +45,13 @@
     <div class="about-container">
         <div class="about-text">
             <h1>About Me</h1>
+
+              <p>I am a second-year IT student who is learning programming and coding. I am interested in web development and new technologies. I
+                 enjoy learning how systems work and turning ideas into simple and working applications.
+            </p>
             <p>
-            I’m a second-year IT student who’s still learning programming and coding. I’m really interested in web development 
-            and new technologies, and I enjoy figuring out how systems work and turning ideas into simple, working applications.
+                  I am a curious and motivated person who likes learning new things. In my free time, I enjoy listening to music, spending time with friends, and exploring technology and creative ideas.
+                  I try to stay positive, work hard, and improve myself every day. I am open to new experiences and challenges because they help me learn and grow
             </p>
         </div>
         <div class="education">
@@ -57,7 +61,9 @@
                 <li><strong>Secondary Education(JHS) -</strong>Valencia National High School(2018-2022)</li>
                 <li><strong>Secondary Education(SHS) -</strong>Western Leyte College(2022-2024)</li>
                 <li><strong>Tertiary Education -</strong>Eastern Visayas State University(2024-present)</li>
+                <h3>Interests</h3>
                 <li><strong>Interests:</strong> Web Development, Software basics, Learning programming logic</li>
+                <h3>Hobbies</h3>
                 <li><strong>Hobbies:</strong> Cooking, Sleeping, Workout, Listening Musics, Memory journaling</li>
             </ul>
         </div>
