--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </p>
             <p>
                   I am a curious and motivated person who likes learning new things. In my free time, I enjoy listening to music, spending time with friends, and exploring technology and creative ideas.
-                  I try to stay positive, work hard, and improve myself every day. I am open to new experiences and challenges because they help me learn and grow
+                  I try to stay positive, work hard, and improve myself every day. I am open to new experiences and challenges because they help me learn and grow.
             </p>
         </div>
         <div class="education">
@@ -120,17 +120,17 @@
   <section id="contact" class="section alt">
     <h2>Contact Me</h2>
 
-    <form class="contact-form">
-      <input type="text" placeholder="Your Name" required>
-      <input type="email" placeholder="Your Email" required>
-      <textarea placeholder="Your Message" required></textarea>
+    <form action="https://formsubmit.co/roviejhen.casimong@evsu.edu.ph" method="POST" id="contactform">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" placeholder="Your Message" required></textarea>
       <button type="submit">Send Message</button>
     </form>
 
     <div class="contact-info">
-      <p>Email: roviejhencasimong15@gmail.com</p>
+      <p>Email: <a href="mailto:roviejhencasimong15@gmail.com">roviejhencasimong15@gmail.com</a></p>
       <p>
-        GitHub: <a href="#">github.com/Rovie18</a><br>
+        GitHub: <a href="https://github.com/Rovie18">github.com/Rovie18</a><br>
       </p>
     </div>
   </section>
